# mm_hook

./: Cargo.toml  braindump.txt  out
example/: basic.rs  example.rs
examples/: example.rs
mm_hook_macros/: Cargo.toml
mm_hook_macros/src/: lib.rs
src/: hash.rs  lib.rs  logging.rs  macros.rs  overrides.rs  patterns.rs  utils.rs
src/game/: actor.rs  entity.rs  hero.rs  hud.rs  mod.rs  nx.rs  scaleform.rs  transform.rs
src/game/assets/: asset_manager.rs  mod.rs
src/game/component/: hero.rs  mod.rs
src/game/hero/: mod.rs
src/game/hud/: message.rs  mod.rs  popup.rs
src/game/scaleform/: mod.rs  value.rs
src/game/ui/: mod.rs  system_menu.rs
src/hero/: mod.rs
src/keybinds/: hooks.rs  keybind.rs  mod.rs
src/menu/: hooks.rs  item.rs  mod.rs
src/settings/: mod.rs
