[package]
name = "spidey_script"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.48.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"]
