[package]
name = "mm_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
retour = { version = "0.3.0" }
canny = { git = "https://github.com/hbgda/canny.git", rev = "3e9bc74" }
paste = "1.0.13"

[dependencies.windows]
version = "0.48.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_Debug" ]
